Prevented overall page from overflowing on y axis.

--- a/WebContent/stylesheet.css
+++ b/WebContent/stylesheet.css
@@ -5,6 +5,7 @@
 }
 html {
     background: #0c0c0c;
+    overflow-y: hidden;
 }
 
 #top_bar {
